Bugfix: Header text and mobile menu wrapping

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 .brand {
-  height: 3rem;
+  min-height: 3rem;
 }
 
 .navbar-desktop {
